# uop-cg-term

./: .gitignore  BMPLoader.cpp  CMakeLists.txt  README.md  camera.cpp  camera.h  constants.h  fog.cpp  fog.h  main.cpp  plane.cpp  plane.h  terrain.cpp  terrain.h  texture.cpp  texture.h  visuals.cpp  visuals.h
models/: plane.mtl
